--- a/pages/alerts/test/index.html
+++ b/pages/alerts/test/index.html
@@ -444,7 +444,7 @@
 <h1 id="test">test</h1>
 <p>testing</p>
 <h2 id="test111">test111</h2>
-<p><img align="left," alt="Image title" src="http://127.0.0.1:8000/pages/alerts/img1.png" width="300px" /></p>
+<p><img align="left," alt="Image title" src="/pages/alerts/img1.png" width="300px" /></p>
 
 
 
