--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
 <h1 id="welcome-to-cdc-on">Welcome to CDC-ON</h1>
 <p>Welcome to CDC-ON</p>
-<p><a href="http://127.0.0.1:8000/download/document.pdf" download>Click to Download</a></p>
+<p><a href="/download/document.pdf" download>Click to Download</a></p>
 
 
 
