--- a/pages/alerts/test/index.html
+++ b/pages/alerts/test/index.html
@@ -443,8 +443,8 @@
 
 <h1 id="test">test</h1>
 <p>testing</p>
-<h2 id="test111">test111222</h2>
-<p><img alt="Image title" src="./img1.png" width="300px" /></p>
+<h2 id="test111">test111</h2>
+<p><img alt="Image title" src="img1.png" width="300px" /></p>
 
 
 
